package com.swp391.backend.enums;

public enum BookingStatus {
    pending,
    confirmed,
    checked_in,
    completed,
    cancelled,
    no_show,
    expired,
    rejected
}
